--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,6 @@
 	<classpathentry kind="lib" path="lib/graphStream/gs-ui-1.3/gs-ui-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/graphStream/scala-library-2.11.7.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="/home/lucas/Téléchargements/dedale-full-0.32.jar"/>
+	<classpathentry kind="lib" path="/home/zhell/UPMC/FOSYMA/lib/dedale/dedale-full-0.32.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
