--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/jade/jade.jar" sourcepath="lib/jade/JADE-src-4.4.0.zip">
+	<classpathentry exported="true" kind="lib" path="lib/jade/jade.jar" sourcepath="lib/jade/JADE-src-4.4.0.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jade.tilab.com/doc/api/"/>
 		</attributes>
@@ -12,6 +12,6 @@
 	<classpathentry kind="lib" path="lib/graphStream/gs-ui-1.3/gs-ui-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/graphStream/scala-library-2.11.7.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="/home/zhell/UPMC/FOSYMA/lib/dedale/dedale-full-0.32.jar"/>
+	<classpathentry kind="lib" path="/users/nfs/Etu7/3262287/FOSYMA/lib/dedale/dedale-full-0.32.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
